--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Sample HTML Page</h1>
+        <h1>This is my First HTML Page</h1>
     </header>
     <main>
         <p>This is a simple HTML page created as an example. It includes various basic HTML elements such as a header, a paragraph, a list, and a link.</p>
